updated java samples
