# samples/composed/server/petstore/java-inflector/src/gen/java/io/swagger/model/InlineResponse2001.java
@@ -1,0 +1,44 @@
+package io.swagger.model;
+import java.util.Objects;
+
+
+
+
+public class InlineResponse2001  implements OneOfinline_response_200_1  {
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    InlineResponse2001 inlineResponse2001 = (InlineResponse2001) o;
+    return true;
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash();
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class InlineResponse2001 {\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
