# samples/composed/server/petstore/java-inflector/src/main/resources/openapi3.yaml
@@ -60,12 +60,15 @@ paths:
       operationId: addPet
       requestBody:
         $ref: '#/components/requestBodies/Pet'
+      responses:
+        "405":
+          description: Invalid input
       security:
       - petstore_auth:
         - write:pets
         - read:pets
       x-contentType: application/json
-      x-accepts: application/json
+      x-accepts: ""
   /pet/findByStatus:
     get:
       tags:
@@ -643,6 +646,67 @@ paths:
           description: User not found
       x-contentType: application/json
       x-accepts: ""
+  /parrot:
+    get:
+      tags:
+      - pet
+      summary: get Parrots
+      operationId: getParrots
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  anyOf:
+                  - $ref: '#/components/schemas/Macaw'
+                  - $ref: '#/components/schemas/Parakeet'
+                x-content-type: application/json
+      x-accepts: application/json
+    put:
+      tags:
+      - pet
+      summary: update parrots
+      operationId: updateParrots
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/body_1'
+      responses:
+        "405":
+          description: Invalid input
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_200'
+      x-contentType: application/json
+      x-accepts: application/json
+    post:
+      tags:
+      - pet
+      summary: Add a new parrow to the store
+      operationId: addParrot
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/body_2'
+      responses:
+        "405":
+          description: Invalid input
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_200_1'
+      x-contentType: application/json
+      x-accepts: application/json
   /test:
     get:
       operationId: testMethod
@@ -877,6 +941,20 @@ components:
             type: boolean
           age:
             type: integer
+    Macaw:
+      type: object
+      properties:
+        color:
+          type: string
+        singer:
+          type: boolean
+    Parakeet:
+      type: object
+      properties:
+        color:
+          type: string
+        soundRepeater:
+          type: boolean
     val_Members:
       required:
       - val_member
@@ -964,6 +1042,36 @@ components:
         status:
           type: string
           description: Updated status of the pet
+    body_1:
+      type: object
+      properties:
+        parrots:
+          type: array
+          items:
+            anyOf:
+            - $ref: '#/components/schemas/Macaw'
+            - $ref: '#/components/schemas/Parakeet'
+    inline_response_200:
+      type: object
+      properties:
+        parrots:
+          type: array
+          items:
+            oneOf:
+            - $ref: '#/components/schemas/Macaw'
+            - $ref: '#/components/schemas/Parakeet'
+      example:
+        parrots:
+        - ""
+        - ""
+    body_2:
+      anyOf:
+      - $ref: '#/components/schemas/Macaw'
+      - $ref: '#/components/schemas/Parakeet'
+    inline_response_200_1:
+      oneOf:
+      - $ref: '#/components/schemas/Macaw'
+      - $ref: '#/components/schemas/Parakeet'
   requestBodies:
     Pet:
       description: Pet object that needs to be added to the store
